
  [ Andrew Pollock ]
  * debian/watch: update for new upstream location
  * apply patch from Mathias Gug to add /etc/puppet to puppet-common's
    directories so that it is removed on package purge (if empty). Also removes
    /var/log/puppet on purge (closes: #571130)

  [ Micah Anderson ]
  * add Suggests: libselinux-ruby1.8 as puppet supports it, but only
    if the library is present

 -- Micah Anderson <micah@debian.org>  Sun, 04 Apr 2010 22:24:05 -0400

puppet (0.25.4-3) unstable; urgency=low

  [ Stig Sandbeck Mathisen ]
  * Fix "puppetmaster and puppet scripts always return 0" with patch from
    Mathias Gug, make sure return codes are actually used (Closes: #573473)

  [ Micah Anderson ]
  * Disable default puppet.conf option pluginsync=true, see puppet-common.NEWS
  * Suggest in puppetmaster package: libapache2-mod-passenger, librack-ruby
  * Create puppetmaster.README with information about the server type
  * Provide an example apache2.conf for libapache2-mod-passenger
  * Ship the rack config.ru, and README as README.rack
  * Fix puppet-el.emacsen-startup script to be properly installed
  * debian/puppetmaster.init: Fix init stop action to not fail if the
    puppetmaster is already stopped, Thanks Mathias Gug (Closes: #574677)
  * Add Suggests: stompserver/libstomp-ruby1.8 - needed for puppetqd 
  * Add README.queueing to puppetmaster package which describes puppetqd
  * Add /etc/init.d/puppetqd and defaults in /etc/defaults/puppetmaster
  * Switch to dpkg-source 3.0 (quilt) format
 
 -- Micah Anderson <micah@debian.org>  Tue, 16 Mar 2010 12:27:07 -0400

puppet (0.25.4-2) unstable; urgency=low

  [ Stig Sandbeck Mathisen ]
  * puppet: do not explicitly remove /var/lib/puppet on purge (Closes: #525852)
  * upstream cherry-pick: Updated man pages and moved puppet.conf.8 to
    puppet.conf.5 (Closes: #563567)
  * Fix "Improper ownership of /var/lib/puppet/state", explicitly create this
    in postinst (and remove in postrm on purge) (Closes: #462551)