@@ -678,6 +678,9 @@ module Puppet
             used when networked databases are used."],
         :dbsocket => [ "", "The database socket location. Only used when networked
             databases are used.  Will be ignored if the value is an empty string."],
+        :dbconnections => [ 0, "The number of database connections. Only used when
+            networked databases are used.  Will be ignored if the value is an empty
+            string or is less than 1."],
         :railslog => {:default => "$logdir/rails.log",
             :mode => 0600,
             :owner => "service",
